[package]
name = "dockerust"
version = "0.1.0"
authors = ["olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2.11", features = ["stream", "process", "io-util"] }
async-trait = "0.1.22"

[dev-dependencies]
tokio = { version = "0.2.11", features = ["rt-core", "macros"] }
pretty_env_logger = "0.3"
